# moneybin

./: .claudeignore  .env.default.example  .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .test_durations  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  dbt_project.yml  followups.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: fix-ci.md  fix-review.md  fix-scenarios.md  fix-security.md
.claude/rules/: agent-experience.md  branching.md  cli.md  column-comments.md  data-extraction.md  database.md  design-principles.md  documentation.md  duckdb-sql.md  identifiers.md  mcp-server.md  mcp.md  reports.md  sandboxing.md  security.md  shipping.md  surface-design.md  testing.md
.cursor/: mcp.json  mcp.json.example
.cursor/rules/: README.md  cli-development.mdc  configuration-management.mdc  core-schema-contract.mdc  data-ownership-privacy.mdc  data-processing.mdc  development-standards.mdc  documentation-sources.mdc  duckdb-functions.mdc  financial-analysis.mdc  incremental-extraction.mdc  naming-conventions.mdc  path-objects.mdc  python-core-standards.mdc  python-development.mdc  python-performance.mdc  python-security.mdc  python-testing.mdc  python-tooling.mdc  rules-creation.mdc  sql-standards.mdc  testing-strategy.mdc  user-python.mdc
.github/: ai-review-protocol.md  dependabot.yml
.github/workflows/: ai-review.yml  ci.yml  release.yml  scenarios.yml  security.yml
dbt/: .user.yml  README.md
dbt/macros/: generate_schema_name.sql
design-system/: .gitignore  CLAUDE.md  MoneyBin Brand Kit.dc.html  SKILL.md  ai-surface.md  charts.md  motion.md  package.json  patterns.md  readme.md  styles.css
design-system/.design-sync/: NOTES.md  component-css.css  config.json  conventions.md
design-system/guidelines/: brand-duckkey.html  brand-logo.html  brand-wordmark.html  charts-cashflow-diverging.html  charts-flow.html  charts-grammar.html  charts-heatmap.html  charts-histogram.html  charts-line-area.html  charts-proportion.html  charts-provenance.html  charts-rollup-bars.html  charts-small-multiples.html  charts-sparklines.html  charts-waterfall.html  colors-brass.html  colors-chart.html  colors-dark.html  colors-light.html  colors-semantic.html  icons-grammar.html  shape-density.html  shape-radii.html  shape-spacing.html  type-data.html  type-display.html  type-ui.html  voice-microcopy.html  voice-trust.html
design-system/tokens/: colors.css  motion.css  shape.css  typography.css
docs/: README.md  application-architecture.md  architecture.md  audience.md  client-server-repo-architecture.md  comparison.md  data-sources-strategy.md  duckdb-data-model.md  duckdb-er-diagram.html  duckdb-er-diagram.md  features.md  followups.md  implementation-summary.md  licensing.md  mcp-server-design.md  modern-ocr-strategy.md  ofx-import-guide.md  plaid-integration-guide.md  privacy-tiers-architecture.md  roadmap.md  setup-instructions.md  sql-formatting-guide.md  w2-extraction-architecture.md  w2-extraction-feature.md
docs/architecture/: 001-medallion-data-layers.md  002-privacy-tiers.md  003-mcp-primary-interface.md  004-e2e-encryption.md  005-security-tradeoffs.md  006-sqlmesh-replaces-dbt.md  007-json-over-parquet-for-sync.md  account-identifiers.md  e2e-encryption.md  encryption-implementation-checklist.md  security-tradeoffs.md  system-overview.md
docs/decisions/: 000-duckdb-as-embedded-store.md  001-medallion-data-layers.md  002-privacy-tiers.md  003-mcp-primary-interface.md  004-e2e-encryption.md  005-security-tradeoffs.md  006-sqlmesh-replaces-dbt.md  007-json-over-parquet-for-sync.md  008-fastmcp-3x-sdk.md  009-encryption-key-management.md  010-writer-coordination.md  011-docs-site-framework.md  012-app-integrity-invariant.md  013-encryption-key-management.md  013-report-classification-declared.md  014-shared-ui-architecture.md  015-transaction-identity-content-derived.md  016-bounded-mcp-tool-registry.md
docs/guides/: README.md  categorization.md  cli-reference.md  connect-gsheet.md  data-import.md  data-pipeline.md  database-security.md  mcp-clients.md  mcp-server.md  observability.md  profiles.md  scenario-authoring.md  setting-up-claude-desktop.md  sql-access.md  synthetic-data.md  threat-model.md  what-the-ai-sees.md
docs/reference/: account-matching.md  data-model.md  data-sources.md  server-api-contract.md  system-overview.md
docs/specs/: 2026-05-13-plaid-sync-design.md  INDEX.md  _template.md  account-identity-resolution.md  account-management.md  agent-visualization.md  ai-client-compatibility.md  app-integrity-invariant.md  architecture-shared-primitives.md  asset-tracking.md  auto-rule-generation.md  budget-tracking.md  categorization-auto-rules.md  categorization-bulk.md  categorization-cold-start.md  categorization-matching-mechanics.md  categorization-overview.md  categorization-source-model.md  categorize-bulk.md  category-source-map.md  category-taxonomy-audit.md  cli-restructure.md  connect-gsheet.md  core-updated-at-convention.md  csv-import.md  data-protection.md  data-reconciliation.md  data-recovery-contract.md  database-migration.md  database-writer-coordination.md  demo-preset.md  distribution-roadmap.md  e2e-testing-plan.md  e2e-testing.md  export.md  extension-contracts.md  investments-data-model.md  investments-overview.md  investments-price-feeds.md  matching-exact-key-dedup.md  (+60 more)
docs/tech/: auto-rule-pipeline.md  cli-startup-flow.md
pipelines/: __init__.py  assets.py  dbt_assets.py  definitions.py
private/specs/: distribution-roadmap.md
scripts/: backfill_categorization_links.py  check_release_metadata.py  claude-mcp.sh  generate_derived_report_classes.py  mcp_eval.py  mcp_surface_snapshot.py  smoke_install.sh
sqlmesh/: README.md  config.py  external_models.yaml
src/cli/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_config_profiles.py  test_documentation_policy.py  test_extract_commands.py  test_load_commands.py  test_parquet_loader.py  test_plaid_extractor.py  test_transform_commands.py
(+1707 files in other folders)
