[build-system]
# Documentation: https://packaging.python.org/en/latest/specifications/build-backend/
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Documentation: https://packaging.python.org/en/latest/specifications/core-metadata/
name = "moneybin"
version = "0.1.0"
description = "AI-powered personal finance app built on DuckDB and MCP"
requires-python = ">=3.12"
dependencies = [
    # Data transforms (SQLMesh manages raw → staging → core pipeline)
    "sqlmesh[duckdb]>=0.200.0",
    # Database and data manipulation
    "duckdb>=1.3.2",
    "polars>=1.32.3",
    "pyarrow>=23.0.0",
    # PDF processing and OCR
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    # API integrations
    "plaid-python>=36.0.0",
    "ofxparse>=0.21",
    "requests>=2.33.0",
    "python-dotenv>=1.2.2",
    # Data validation and utilities
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    # Modern CLI framework
    "typer>=0.15.0",
    # MCP server — primary AI assistant interface
    "mcp[cli]>=1.9.0",
    # Security: transitive dependency version overrides to address CVEs.
    # These packages are not imported directly by moneybin; pins are here solely to
    # force safe versions that uv would otherwise resolve from transitive constraints.
    # Review and remove each pin once the pulling package updates its own lower bound.
    #   cryptography: CVE-2026-34073 (via mcp[crypto], pdfminer-six) — fixed in 46.0.6
    #   pygments:     CVE-2026-4539  (via rich → sqlmesh/mcp, ipython) — fixed in 2.20.0
    #   pyjwt:        CVE-2026-32597 (via mcp[crypto])                 — fixed in 2.12.0
    "cryptography>=46.0.6",
    "pygments>=2.20.0",
    "pyjwt>=2.12.0",
]

[tool.setuptools]
# Configure src/ layout for proper package discovery
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# Find packages in src/ directory
where = ["src"]
include = ["moneybin*"]

[tool.setuptools.package-data]
# Include SQLMesh project files in distribution
moneybin = ["../../sqlmesh/config.yaml", "../../sqlmesh/models/**/*.sql"]

[project.scripts]
# Unified CLI entry point using Typer
moneybin = "moneybin.cli.main:main"

[dependency-groups]
# Documentation: https://peps.python.org/pep-0735/
# Modern dependency groups standard (PEP 735) for optional/development dependencies
dev = [
    # Code quality and formatting
    "ruff>=0.15.10",
    "pyright>=1.1.408",
    "pre-commit>=4.4.0",
    "sqlmesh[lsp]>=0.200.0",
    "sqlparse>=0.5.3",
    # Security auditing
    "pip-audit>=2.10.0",
    # Testing framework and tools
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
]

server = [
    # Server-side API framework (for future hosted MoneyBin Sync)
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    # plaid-python already in main dependencies
]

[tool.ruff]
# Documentation: https://docs.astral.sh/ruff/configuration/
target-version = "py312"
line-length = 88
preview = true

[tool.ruff.lint]
# Documentation: https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstring
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "E501", # line too long, handled by line-length
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
# Test files should use asserts - this is standard pytest practice
"tests/**/*.py" = [
    "S101",  # assert used - standard in pytest
    "D102",  # test methods don't need docstrings
]
# CLI commands and user config use print() for user-facing output
"src/moneybin/cli/commands/*.py" = [
    "T201",  # print() allowed in CLI commands for user output
]
"src/moneybin/utils/user_config.py" = [
    "T201",  # print() allowed for interactive user prompts
]
# MCP tools/resources build SQL with parameterized WHERE clauses from controlled inputs
"src/moneybin/mcp/*.py" = [
    "S608",  # SQL injection false positives — all user values are parameterized
]
# Services and CLI use TableRef constants in SQL, not user input
"src/moneybin/services/*.py" = [
    "S608",  # SQL injection false positives — TableRef constants, parameterized values
]
"src/moneybin/cli/commands/categorize.py" = [
    "T201",  # print() allowed in CLI commands for user output
    "S608",  # SQL injection false positives — TableRef constants
]
"scripts/*.py" = [
    "S608",  # SQL injection false positives — TableRef constants, parameterized values
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Documentation: https://docs.astral.sh/ruff/formatter/
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# insert-final-newline = true  # This is not a valid Ruff formatter option

[tool.pyright]
# Documentation: https://microsoft.github.io/pyright/#/configuration
# High-quality configuration balancing rigor with pragmatism
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests", "sqlmesh"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

# Unused code detection
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true

# Optional type handling - critical for financial data
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

# Untyped code detection - ensures type safety
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true

# Privacy and constants - important for financial apps
reportPrivateUsage = true
reportConstantRedefinition = true

# Method overrides - ensures inheritance correctness
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true

# Type completeness - core rigor
reportMissingParameterType = true
reportMissingTypeArgument = true

# String safety - prevents runtime errors
reportInvalidStringEscapeSequence = true

# Unknown types - catches type inference failures
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = false
reportUnknownMemberType = true

# Additional rigor for financial applications (conservative selection)
reportInconsistentConstructor = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnusedExpression = true

[tool.pytest.ini_options]
# Documentation: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    # Ignore deprecation warnings from third-party libraries we don't control
    "ignore:Call to deprecated method findAll:DeprecationWarning:ofxparse",
    # astor 0.8.1 uses ast.Num which is removed in Python 3.14; remove when astor is updated
    "ignore:ast.Num is deprecated:DeprecationWarning:astor",
    # pydantic 2.12.5 still triggers json_encoders warning from an indirect dependency;
    # remove once the offending dependency migrates to custom_serializers
    "ignore:`json_encoders` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
    # Python 3.12+ warns about fork() in multi-threaded processes (from MCP test fixtures);
    # remove once the test infrastructure switches to spawn or forkserver
    "ignore:This process.*is multi-threaded.*use of fork:DeprecationWarning:multiprocessing",
]

[tool.coverage.run]
# Documentation: https://coverage.readthedocs.io/en/7.4.0/config.html#run-section
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
# Documentation: https://coverage.readthedocs.io/en/latest/config.html#report-section
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
